更新好健康

--- a/health/index.html
+++ b/health/index.html
@@ -49,43 +49,14 @@
   </div>
   <!-- end navbar-collapse --> 
 </nav>
-<div id="wrapper">
-  
-  <!-- Sidebar -->
-  <div id="sidebar-wrapper" class="sidebar-scroll">
-    <ul class="sidebar-nav">
-      <li> <a href="index.html" class="active"><i class="las la-heartbeat"></i>好健康</a> </li>
-      <li> <a href="wanfang-hospital.html"><i class="las la-hospital"></i>萬芳醫院專區</a>
-        <ul>
-          <li><a href="wanfang-hospital-doctor.html"><i class="las la-minus"></i>看診進度查詢</a></li>
-          <li><a href="https://line.me/R/ti/p/fHiSTf5eVI" target="_blank"><i class="las la-minus"></i>萬小芳LINE@</a></li>
-        </ul>
-      </li>
-      <li> <a href="health.html"><i class="las la-walking"></i>健康園地</a>
-        <ul>
-          <li><a href="health-article.html"><i class="las la-minus"></i>用藥常識</a></li>
-          <li><a href="health-article2.html"><i class="las la-minus"></i>養生資訊</a></li>
-          <li><a href="health-article3.html"><i class="las la-minus"></i>營養師建議</a></li>
-        </ul>
-      </li>
-      <li> <a href="long-term-care.html"><i class="las la-notes-medical"></i>社區長照</a>
-        <ul>
-          <li><a href="long-term-care-apply.html"><i class="las la-minus"></i>申請長照管道</a></li>
-          <li><a href="long-term-care-institution.html"><i class="las la-minus"></i>文山區長照機構</a></li>
-          <li><a href="long-term-care-station.html"><i class="las la-minus"></i>文山區石頭湯</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-  <!-- end sidebar-wrapper --> 
+<div id="wrapper" class="pl-0">
   
   <!-- Page Content -->
   <div id="page-content-wrapper">
-    <div class="container-fluid">
-      <a href="#menu-toggle" class="btn btn-outline-dark btn-sm mb-3" id="menu-toggle">健康選單</a>
+    <div class="container">
       <h3 class="page-title text-center mb-3"><i class="las la-heartbeat mr-2"></i>好健康</h3>
       <div class="row text-center mb-3">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="card card-body bg-info text-shadow shadow mb-2">
             <a href="wanfang-hospital.html" class="text-white stretched-link">
             <p class="mb-0"><i class="las la-hospital la-5x"></i></p>
@@ -93,7 +64,15 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
+          <div class="card card-body bg-primary text-shadow shadow mb-2">
+            <a target="_blank" href="https://www.facebook.com/wssc.tw" class="text-white stretched-link">
+            <p class="mb-0"><i class="las la-table-tennis la-5x"></i></p>
+            <p class="tfs-20 mb-0"><strong>文山運動中心</strong></p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-3">
           <div class="card card-body bg-green text-shadow shadow mb-2">
             <a href="health.html" class="text-white stretched-link">
             <p class="mb-0"><i class="las la-walking la-5x"></i></p>
@@ -101,7 +80,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="card card-body bg-orange text-shadow shadow mb-2">
             <a href="long-term-care.html" class="text-white stretched-link">
             <p class="mb-0"><i class="las la-notes-medical la-5x"></i></p>
