--- a/health/wanfang-hospital.html
+++ b/health/wanfang-hospital.html
@@ -47,54 +47,35 @@
   </div>
   <!-- end navbar-collapse --> 
 </nav>
-<div id="wrapper">
-  
-  <!-- Sidebar -->
-  <div id="sidebar-wrapper" class="sidebar-scroll">
-    <ul class="sidebar-nav">
-      <li> <a href="index.html"><i class="las la-heartbeat"></i>好健康</a> </li>
-      <li> <a href="wanfang-hospital.html" class="active"><i class="las la-hospital"></i>萬芳醫院專區</a>
-        <ul>
-          <li><a href="wanfang-hospital-doctor.html"><i class="las la-minus"></i>看診進度查詢</a></li>
-          <li><a href="https://line.me/R/ti/p/fHiSTf5eVI" target="_blank"><i class="las la-minus"></i>萬小芳LINE@</a></li>
-        </ul>
-      </li>
-      <li> <a href="health.html"><i class="las la-walking"></i>健康園地</a>
-        <ul>
-          <li><a href="health-article.html"><i class="las la-minus"></i>用藥常識</a></li>
-          <li><a href="health-article2.html"><i class="las la-minus"></i>養生資訊</a></li>
-          <li><a href="health-article3.html"><i class="las la-minus"></i>營養師建議</a></li>
-        </ul>
-      </li>
-      <li> <a href="long-term-care.html"><i class="las la-notes-medical"></i>社區長照</a>
-        <ul>
-          <li><a href="long-term-care-apply.html"><i class="las la-minus"></i>申請長照管道</a></li>
-          <li><a href="long-term-care-institution.html"><i class="las la-minus"></i>文山區長照機構</a></li>
-          <li><a href="long-term-care-station.html"><i class="las la-minus"></i>文山區石頭湯</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-  <!-- end sidebar-wrapper --> 
+<div id="wrapper" class="pl-0">
   
   <!-- Page Content -->
   <div id="page-content-wrapper">
-    <div class="container-fluid">
-      <a href="#menu-toggle" class="btn btn-outline-dark btn-sm mb-3" id="menu-toggle">健康選單</a>
+    <div class="container">
       <h3 class="page-title text-center mb-3"><i class="las la-hospital mr-2"></i>萬芳醫院專區</h3>
-      <div class="card card-body mb-4 shadow">
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="text-center">
-              <p><a href="wanfang-hospital-doctor.html"><img src="../assets/images/wanfang-hospital-logo.png" width="126" height="auto" alt=""/></a></p>
-              <p> <a href="wanfang-hospital-doctor.html">看診進度查詢</a></p>
-            </div>
+      <div class="row text-center mb-3">
+        <div class="col-sm-4">
+          <div class="card card-body bg-info text-shadow shadow mb-2">
+            <a target="_blank" href="https://www.wanfang.gov.tw/p3_register_e.aspx" class="text-white stretched-link">
+            <p class="mb-0"><i class="las la-medkit la-5x"></i></p>
+            <p class="tfs-20 mb-0"><strong>線上掛號</strong></p>
+            </a>
           </div>
-          <div class="col-sm-6">
-            <div class="text-center">
-              <p class="mb-0"><a href="https://line.me/R/ti/p/fHiSTf5eVI" target="_blank"><i class="lab la-line la-9x mr-2 text-green"></i></a></p>
-              <p> <a href="https://line.me/R/ti/p/fHiSTf5eVI" target="_blank">萬小芳LINE@</a></p>
-            </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card card-body bg-info text-shadow shadow mb-2">
+            <a target="_blank" href="https://reurl.cc/nEzean" class="text-white stretched-link">
+            <p class="mb-0"><i class="las la-heartbeat la-5x"></i></p>
+            <p class="tfs-20 mb-0"><strong>共好健康照護網</strong></p>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card card-body bg-info text-shadow shadow mb-2">
+            <a href="/health/wanfang-app.html" class="text-white stretched-link">
+            <p class="mb-0"><img width="80" src="../assets/images/wantfunapp.webp" alt=""></p>
+            <p class="tfs-20 mb-0"><strong>萬芳醫院App</strong></p>
+            </a>
           </div>
         </div>
       </div>
