--- a/index.html
+++ b/index.html
@@ -65,26 +65,14 @@
         </div>
       </li>
       <li class="nav-item dropdown mr-3">
-        <a class="nav-link dropdown-toggle" href="health/index.html" id="healthDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="/health/index.html" id="healthDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="las la-heartbeat mr-1"></i>好健康</a> 
         </a>
         <div class="dropdown-menu" aria-labelledby="healthDropdown">
-          <a class="dropdown-item" href="health/wanfang-hospital.html">萬芳醫院專區</a>
-          <a class="dropdown-item" href="javascript:;">文山運動中心</a>
-          <a class="dropdown-item" href="health/health.html">健康園地</a>
-          <a class="dropdown-item" href="health/long-term-care.html">社區長照</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown mr-3">
-        <a class="nav-link dropdown-toggle" href="user/index.html" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="las la-user-circle mr-1"></i>會員專區</a> 
-        </a>
-        <div class="dropdown-menu" aria-labelledby="userDropdown">
-          <a class="dropdown-item" href="user/index.html">帳戶總覧</a>
-          <a class="dropdown-item" href="user/account.html">會員資訊</a>
-          <a class="dropdown-item" href="user/coupon-list.html">優惠卷查詢</a>
-          <a class="dropdown-item" href="user/notification.html">推播訊息</a>
-          <a class="dropdown-item" href="user/purchase.html">好美味訂購紀錄</a>
+          <a class="dropdown-item" href="/health/wanfang-hospital.html">萬芳醫院專區</a>
+          <a class="dropdown-item" target="_blank" href="https://www.facebook.com/wssc.tw">文山運動中心</a>
+          <a class="dropdown-item" href="/health/health.html">健康園地</a>
+          <a class="dropdown-item" href="/health/long-term-care.html">社區長照</a>
         </div>
       </li>
     </ul>
