修改訂購記錄

--- a/neighborhood/rent.html
+++ b/neighborhood/rent.html
@@ -532,7 +532,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-light">取消</button>
+        <button class="btn btn-light" data-dismiss="modal">取消</button>
         <button class="btn btn-info">確認</button>
       </div>
     </div>
