--- a/user/purchase-detail.html
+++ b/user/purchase-detail.html
@@ -74,12 +74,16 @@
     <div class="container-fluid"> <a href="#menu-toggle" class="btn btn-outline-dark btn-sm mb-3" id="menu-toggle">會員選單</a>
       <h5 class="page-title text-md-left text-center mb-2 ml-1">訂單明細</h5>
       <div class="card card-body tfs-13 p-3 mb-4">
-        <p class="mb-3"><span class="badge bg-green shadow tfs-18 p-1">外送</span></p>
-		<div class="mb-1"> 訂單編號：<strong>202106301258</strong> </div>
+        
+        <div class="d-flex justify-content-between">
+          <p class="mb-3"><span class="badge bg-green shadow tfs-18 p-1">外送</span></p>
+          <a href="javascript:;" class="mb-3 btn btn-sm btn-outline-dark">付款連結</a>
+        </div>
+		    <div class="mb-1"> 訂單編號：<strong>202106301258</strong> </div>
         <div class="mb-1"> 購買日期：<strong>2021-06-30 10:32AM</strong> </div>
         <div class="mb-1"> 商店名稱：<strong>Patio46 沛緹歐美式餐廳</strong> </div>       
         <div class="mb-1"> 訂單狀態：<strong class="text-red">訂單確認中</strong> </div>
-		<div class="mb-1"> 取餐時間：<strong class="text-red">2021-07-10 12:00~12:30</strong> </div>  
+		    <div class="mb-1"> 取餐時間：<strong class="text-red">2021-07-10 12:00~12:30</strong> </div>  
         <div class="mb-1"> 取餐地點：<strong>台北市信義路四段55號</strong> </div>
         <div> 訂單備註：<strong>N/A</strong> </div>
         <hr>
@@ -96,24 +100,7 @@
             <!-- end row --> 
           </div>
         </div>
-        <!-- end media -->
-        <hr>
-        <div class="media"> <img src="../assets/images/demo/p-13.jpg" width="100" height="auto" alt=""/>
-          <div class="media-body pl-2">
-            <div class="row">
-              <div class="col-md-11">
-                <p class="tfs-15 mb-0">冰拿鐵</p>
-                <p class="mb-0 text-gray">規格：大杯，糖-正常，冰塊-少冰</p>
-                <p class="mb-0">x2</p>
-              </div>
-              <div class="col-md-1"> $100 </div>
-            </div>
-            <!-- end row --> 
-          </div>
-        </div>
-        <!-- end media -->
-        <hr>
-        <p class="tfs-16"><i class="las la-plus mr-1"></i>加購商品</p>
+        <p class="mt-3 tfs-16 font-weight-bold"><i class="las la-plus mr-1"></i>加購商品</p>
         <div class="media"> <img src="../assets/images/demo/p-18.jpg" width="100" height="auto" alt=""/>
           <div class="media-body pl-2">
             <div class="row">
@@ -129,6 +116,21 @@
         </div>
         <!-- end media -->
         <hr>
+
+        <div class="media"> <img src="../assets/images/demo/p-13.jpg" width="100" height="auto" alt=""/>
+          <div class="media-body pl-2">
+            <div class="row">
+              <div class="col-md-11">
+                <p class="tfs-15 mb-0">冰拿鐵</p>
+                <p class="mb-0 text-gray">規格：大杯，糖-正常，冰塊-少冰</p>
+                <p class="mb-0">x2</p>
+              </div>
+              <div class="col-md-1"> $100 </div>
+            </div>
+            <!-- end row --> 
+          </div>
+        </div>
+        <p class="mt-3 tfs-16 font-weight-bold"><i class="las la-plus mr-1"></i>加購商品</p>
         <div class="media"> <img src="../assets/images/demo/p-23.jpg" width="100" height="auto" alt=""/>
           <div class="media-body pl-2">
             <div class="row">
@@ -142,7 +144,7 @@
             <!-- end row --> 
           </div>
         </div>
-        <!-- end media --> 
+        <!-- end media -->
         <hr>
 		  
 		<div class="row mb-4">
