新增推薦碼後台頁面

--- a/admin/invitation-code-awards.html
+++ b/admin/invitation-code-awards.html
@@ -284,7 +284,7 @@
       </div>
       <div class="modal-footer justify-content-center">
         <button type="button" class="btn btn-outline-light btn-sm" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-outline-info btn-sm" data-dismiss="modal">確認</button>
+        <button type="button" class="btn btn-outline-info btn-sm">確認</button>
       </div>
     </div>
   </div>
