--- a/index.html
+++ b/index.html
@@ -50,7 +50,27 @@
           <a class="dropdown-item" href="javascript:;">點心宵夜及飲品</a>
         </div>
       </li>
-      <li class="nav-item mr-3"> <a class="nav-link" href="shop/index.html"><i class="las la-store-alt mr-1"></i>好商圈</a> </li>
+      <li class="nav-item dropdown mr-3"> 
+        <a class="nav-link dropdown-toggle" href="./shop/index.html" id="shopDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="las la-store-alt mr-1"></i>好商圈
+        </a> 
+        <div class="dropdown-menu" aria-labelledby="shopDropdown">
+          <!-- 好健康 -->
+          <a class="dropdown-item" href="/neighborhood/report.html">好健康</a>
+          <!-- 第二層 floor-2 -->
+          <a class="dropdown-item floor-2" href="/neighborhood/report.html">診所</a>
+
+          <!-- 第三層 floor-3 -->
+          <a class="dropdown-item floor-3" href="/neighborhood/report.html">中醫</a>
+          <a class="dropdown-item floor-3" href="/neighborhood/report.html">西醫</a>
+          <a class="dropdown-item floor-3" href="/neighborhood/report.html">國術館</a>
+          <!-- 好健康 end -->
+          <!-- <div class="dropdown-divider"></div> -->
+          <a class="dropdown-item" href="/neighborhood/rent.html">好造型</a>
+          <a class="dropdown-item" href="/neighborhood/traffic.html">好有趣</a>
+        </div>
+      </li>
+
       <li class="nav-item dropdown mr-3">
         <a class="nav-link dropdown-toggle" href="neighborhood/index.html" id="neighborhoodDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="las la-user-friends mr-1"></i>好社區</a>
@@ -70,7 +90,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="healthDropdown">
           <a class="dropdown-item" href="/health/wanfang-hospital.html">萬芳醫院專區</a>
-          <a class="dropdown-item" target="_blank" href="https://www.facebook.com/wssc.tw">文山運動中心</a>
+          <a class="dropdown-item" href="/health/wenshan.html">文山運動中心</a>
           <a class="dropdown-item" href="/health/health.html">健康園地</a>
           <a class="dropdown-item" href="/health/long-term-care.html">社區長照</a>
         </div>
