--- a/shop/index.html
+++ b/shop/index.html
@@ -62,7 +62,7 @@
           <a class="dropdown-item" href="javascript:;">點心宵夜及飲品</a>
         </div>
       </li>
-      <li class="nav-item mr-3"> <a class="nav-link" href="shop/index.html"><i class="las la-store-alt mr-1"></i>好商圈</a> </li>
+      <li class="nav-item mr-3"> <a class="nav-link" href="./index.html"><i class="las la-store-alt mr-1"></i>好商圈</a> </li>
       <li class="nav-item dropdown mr-3">
         <a class="nav-link dropdown-toggle" href="javascript:;" id="neighborhoodDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="las la-user-friends mr-1"></i>好社區</a>
