好商圈下拉選單調整為 mousehover 時才展開下一層

--- a/index.html
+++ b/index.html
@@ -50,24 +50,88 @@
           <a class="dropdown-item" href="javascript:;">點心宵夜及飲品</a>
         </div>
       </li>
+      
       <li class="nav-item dropdown mr-3"> 
         <a class="nav-link dropdown-toggle" href="./shop/index.html" id="shopDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="las la-store-alt mr-1"></i>好商圈
         </a> 
         <div class="dropdown-menu" aria-labelledby="shopDropdown">
           <!-- 好健康 -->
-          <a class="dropdown-item" href="/neighborhood/report.html">好健康</a>
-          <!-- 第二層 floor-2 -->
-          <a class="dropdown-item floor-2" href="/neighborhood/report.html">診所</a>
+          <div class="dropdown-item dropdown-submenu">
+            <a class="nav-link dropdown-toggle suba" href="/neighborhood/report.html">好健康</a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/report.html">診所 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">中醫</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">西醫</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">國術館</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/report.html">藥房 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">中醫</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">西醫</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/report.html">獸醫 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">可開刀</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">可住宿</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/report.html">養生館 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">推拿</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/report.html">物理治療</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          
+          <!-- 好造型 -->
+          <div class="dropdown-item dropdown-submenu">
+            <a class="nav-link dropdown-toggle suba" href="/neighborhood/rent.html">好造型</a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/rent.html">衣服飾品 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/rent.html">韓式</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/rent.html">日式</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/rent.html">造型 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/rent.html">妝髮</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/rent.html">服飾</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/rent.html">洗衣店 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/rent.html">自助洗衣</a></li>
+                  <li><a class="dropdown-item" href="/neighborhood/rent.html">代客洗方</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
 
-          <!-- 第三層 floor-3 -->
-          <a class="dropdown-item floor-3" href="/neighborhood/report.html">中醫</a>
-          <a class="dropdown-item floor-3" href="/neighborhood/report.html">西醫</a>
-          <a class="dropdown-item floor-3" href="/neighborhood/report.html">國術館</a>
-          <!-- 好健康 end -->
-          <!-- <div class="dropdown-divider"></div> -->
-          <a class="dropdown-item" href="/neighborhood/rent.html">好造型</a>
-          <a class="dropdown-item" href="/neighborhood/traffic.html">好有趣</a>
+          <div class="dropdown-item dropdown-submenu">
+            <a class="nav-link dropdown-toggle suba" href="/neighborhood/rent.html">好有趣</a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-submenu dropdown-item">
+                <a class="nav-link dropdown-toggle suba" href="/neighborhood/rent.html">桌遊 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/neighborhood/rent.html">供餐食</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+
         </div>
       </li>
 
